--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,9 +1,24 @@
 .home-card {
     height: 250px;
     padding-bottom: 5px;
+    overflow: hidden;
+    transition: 0.1s linear;
 }
 
 .home-card:hover {
     cursor: pointer;
     box-shadow: 0px 0px 10px 3px grey;
+}
+
+.chapter-number {
+    color: rgba(255,255,255,0);
+    margin-bottom: 5px;
+    transition: 0.1s linear;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+}
+
+.home-card:hover .chapter-number {
+    color: rgba(255,255,255,1);
 }
