--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,21 @@
 .active {
     background-color: #145c97 !important;
 }
+
+#burger {
+    display: none;
+}
+
+#menuItems {
+    display: inline-block;
+}
+
+@media screen and (max-width: 600px ) {
+    #burger {
+        display: inline-block; 
+    }
+
+    #menuItems {
+        display: none;
+    }
+}
