--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,10 +10,18 @@
     display: inline-block;
 }
 
-@media screen and (max-width: 600px ) {
+@media screen and (max-width: 820px ) {
     #burger {
-        display: inline-block; 
+        display: inline-block;
     }
+
+    #title-image {
+    	margin: 0 auto;
+    }
+
+    #title-image img {
+		height: 50px;
+	}
 
     #menuItems {
         display: none;
