add logo and favicon

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,11 @@
     display: inline-block;
 }
 
+.appbar-img {
+	height: 50px;
+	margin-right: 10px;
+}
+
 @media screen and (max-width: 820px ) {
     #burger {
         display: inline-block;
@@ -25,5 +30,9 @@
 
     #menuItems {
         display: none;
+    }
+    
+    .appbar-img {
+    	height: 15px;
     }
 }
